Full copy of a scene does not duplicate particle settings #77255

Closed
opened 2020-06-01 18:19:01 +02:00 by Yegor · 7 comments

System Information
Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.83.0 Beta, branch: master, commit date: 2020-05-29 17:42, hash: 691a1e3357, 2.90

Short description of error
Don't know if it's a bug or a feature. When you do a full copy you expect it to be a full copy, but particle settings rather stay linked.
And what's more, it should assign the copy of an instantiated object from the new scene. Well, I suppose it should work like that at least.

Exact steps for others to reproduce the error
Open the file.
Do Full Copy.
Particle settings stay linked.

full_copy_particlesettings_bug.blend

**System Information** Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.83.0 Beta, branch: master, commit date: 2020-05-29 17:42, hash: `691a1e3357`, 2.90 **Short description of error** Don't know if it's a bug or a feature. When you do a full copy you expect it to be a full copy, but particle settings rather stay linked. And what's more, it should assign the copy of an instantiated object from the new scene. Well, I suppose it should work like that at least. **Exact steps for others to reproduce the error** Open the file. Do Full Copy. Particle settings stay linked. [full_copy_particlesettings_bug.blend](https://archive.blender.org/developer/F8570139/full_copy_particlesettings_bug.blend)
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Not 100% sure this is by design, but would also expect this to get duplicated along...
(BKE_object_copy_particlesystems is actually called though, seems like ParticleSettings are not duplicated with this?)

CC @mont29

Not 100% sure this is by design, but would also expect this to get duplicated along... (`BKE_object_copy_particlesystems` is actually called though, seems like `ParticleSettings` are not duplicated with this?) CC @mont29
Member

And what's more, it should assign the copy of an instantiated object from the new scene.

Would also agree on instance_object ideally being remapped, might be a feature request though (this might not be copied after all since it could be from some other scene).

> And what's more, it should assign the copy of an instantiated object from the new scene. Would also agree on `instance_object` ideally being remapped, might be a feature request though (this might not be copied after all since it could be from some other scene).

This is a TODO really, code is working as expected currently.

Think this full scene copy operation needs to be fully rewritten to use modern code and tools, and it should also use the same settings (in user preferences) as object copying itself, to decide which of its sub-data IDs it should duplicate alongside...

This is a TODO really, code is working as expected currently. Think this full scene copy operation needs to be fully rewritten to use modern code and tools, and it should also use the same settings (in user preferences) as object copying itself, to decide which of its sub-data IDs it should duplicate alongside...

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-06-10 19:47:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77255
No description provided.