Make `BKE_scene_copy` fully handle all duplicate modes, deep copy included.

This greatly simplifies and unifies logic.

Also addresses T77255: full scene copy will now use same preferences
parameters as object or collection duplicate to choose which data-blocks
to copy along.